feat: add server-side runtime action system
Refs: UJFE-008